--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@mantine/core": "7.13.5",
     "@mantine/hooks": "7.13.5",
+    "leaflet": "^1.9.4",
+    "leaflet-omnivore": "^0.3.4",
     "next": "15.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-kml": "^2.1.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
