--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "7.13.5",
     "@mantine/hooks": "7.13.5",
+    "@tabler/icons-react": "^3.21.0",
     "leaflet": "^1.9.4",
     "leaflet-omnivore": "^0.3.4",
     "next": "15.0.1",
