--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-kml": "^2.1.2"
+    "react-leaflet-kml": "^2.1.2",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1",
